# cpp-grad

./: .gitignore  CMakeLists.txt  Makefile  README.md  neuron.dot  tcr.sh
examples/: basic.cpp  graph.cpp
include/: cpp_grad.hpp
tests/: test_value.cpp
